# little-canary

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
benchmarks/: dashboard.html  full_pipeline_test.py  prompts.json  prompts_fp_realistic.json  red_team_runner.py  run_fp_test.py
examples/: chatbot_example.py  clawdbot_example.py  generic_example.py  hermes_example.py
little_canary/: __init__.py  analyzer.py  audit_logger.py  canary.py  canary_guard.py  cli.py  judge.py  openai_provider.py  pipeline.py  server.py  structural_filter.py
tests/: conftest.py  test_analyzer.py  test_audit_logger.py  test_canary.py  test_canary_guard.py  test_judge.py  test_openai_provider.py  test_pipeline.py  test_server.py  test_structural_filter.py
