[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "little-canary"
version = "0.1.0"
description = "Sacrificial LLM instances as behavioral probes for prompt injection detection"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Roli Bosch", email = "lpcisystems@gmail.com"},
]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "canary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.32.2",
]

[project.optional-dependencies]
benchmark = [
    "anthropic>=0.39.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "anthropic>=0.39.0",
]

[project.urls]
Homepage = "https://github.com/roli-lpci/little-canary"
Repository = "https://github.com/roli-lpci/little-canary"
Issues = "https://github.com/roli-lpci/little-canary/issues"

[tool.setuptools.packages.find]
include = ["little_canary*"]

[tool.setuptools.package-data]
little_canary = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests that require network mocking",
]

[tool.coverage.run]
source = ["little_canary"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP007", "E501", "SIM102", "SIM110", "SIM300"]
